wxc/include/ewxw/wxc_glue.h

/* wxNodeBase */
TClassDef(wxNodeBase)

/* wxNotebook */
TClassDefExtend(wxNotebook,wxControl)
int        wxNotebook_AddPage( TSelf(wxNotebook) _obj, TClass(wxWindow) pPage, TStringVoid strText, TBoolInt bSelect, int imageId );
void       wxNotebook_AdvanceSelection( TSelf(wxNotebook) _obj, TBoolInt bForward );
TClass(wxNotebook) wxNotebook_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
int        wxNotebook_DeleteAllPages( TSelf(wxNotebook) _obj );
int        wxNotebook_DeletePage( TSelf(wxNotebook) _obj, int nPage );
TClass(wxImageList) wxNotebook_GetImageList( TSelf(wxNotebook) _obj );
TClass(wxWindow)    wxNotebook_GetPage( TSelf(wxNotebook) _obj, int nPage );
int        wxNotebook_GetPageCount( TSelf(wxNotebook) _obj );
int        wxNotebook_GetPageImage( TSelf(wxNotebook) _obj, int nPage );
TStringLen wxNotebook_GetPageText( TSelf(wxNotebook) _obj, int nPage, TStringOutVoid _buf );
int        wxNotebook_GetRowCount( TSelf(wxNotebook) _obj );
int        wxNotebook_GetSelection( TSelf(wxNotebook) _obj );
int        wxNotebook_InsertPage( TSelf(wxNotebook) _obj, int nPage, TClass(wxWindow) pPage, TStringVoid strText, TBoolInt bSelect, int imageId );
int        wxNotebook_RemovePage( TSelf(wxNotebook) _obj, int nPage );
void       wxNotebook_SetImageList( TSelf(wxNotebook) _obj, TClass(wxImageList) imageList );
void       wxNotebook_SetPadding( TSelf(wxNotebook) _obj, TSize(_w,_h) );
int        wxNotebook_SetPageImage( TSelf(wxNotebook) _obj, int nPage, int nImage );
void       wxNotebook_SetPageSize( TSelf(wxNotebook) _obj, TSize(_w,_h) );
int        wxNotebook_SetPageText( TSelf(wxNotebook) _obj, int nPage, TStringVoid strText );
int        wxNotebook_SetSelection( TSelf(wxNotebook) _obj, int nPage );